--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=LibraryManagementMain
 
+jwt.token.validity=18000
+jwt.signing.key=signingkey
+jwt.authorities.key=roles
+jwt.token.prefix=Bearer
+jwt.header.string=Authorization
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/library_management
 spring.datasource.username=root
 spring.datasource.password=mariadb
