--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=LibraryManagementMain
 
-jwt.token.validity=18000
+jwt.token.validity=3600
 jwt.signing.key=signingkey
 jwt.authorities.key=roles
 jwt.token.prefix=Bearer
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/library_management
 spring.datasource.username=root
 spring.datasource.password=mariadb
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 
 spring.flyway.enabled=true
@@ -18,4 +18,4 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 spring.thymeleaf.check-template-location=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
